<resources>
    <string name="welcomeSplashMsg">Welcome</string>
    <string name="app_name">2 in 1</string>
    <string name="welcomeMsg">Welcome to 2 in 1 . \n\n Please feel free to sign in using the Menu button on the top left.</string>
    <string name="signInMsg">Please click to sign in to the account: </string>
    <string name="signedIn"> Your already signed in.\n\nYou can click below to logout</string>
    <string name="home">Home</string>
    <string name="goBack">Go Back</string>
    <string name="logout">Sign out</string>
    <string name="fb">Facebook</string>
    <string name="fb_profileDes">Facebook Profile picture</string>
    <string name="twitter">Twitter</string>
    <string name="alert">Alert</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirmTitle">Confirmation</string>
    <string name="loggingOut">Signing out of: </string>
    <string name="appLogoDesc">2 in 1 Logo</string>

    <!--  Navigation list menu  -->
    <string name="action_settings">Settings</string>
    <string name="accountSection">Account Details</string>
    <string name="viewFeed">View Your Posts</string>
    <string name="viewTweets">View Your Tweets</string>
    <string name="fbSocialFeed">Your Facebook Feed</string>
    <string name="fbPosting">Post to Facebook</string>
    <string name="twitterSocialFeed">Your Twitter Feed</string>
    <string name="twitterPosting">Post to Twitter</string>
    <string name="moreSection">More</string>
    <string name="bothFeeds">View Both Feeds</string>
    <string name="postToBoth">Post To Both Sites</string>
    <string name="timeline">Latest Tweets</string>

    <!-- Settings Preference Screen -->
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="about2in1App">About this App</string>
    <string name="conSocials">Connected Socials</string>
    <string name="notifySets">Notification Settings</string>
    <string name="notifications">Notifications</string>

    <!--    About Preference Screen -->
    <string name="aboutQuestion">What is 2 in 1?</string>
    <string name="aboutMsg">2 in 1 is Android application made by Ryan Noble ,B00097070, for his fourth year thesis project.</string>
    <string name="aboutMsg2">Submitted and created as part of Bachelor of Science (Honours).</string>
    <string name="aboutMsg3">2 in 1 is an app that implements both Facebook SDK and Twitter SDK into the android application.</string>
    <string name="aboutMsg4">Some icons were downloaded from Icons8: https://icons8.com </string>

    <!--    Accounts Settings Preference Screen -->
    <string name="feedAmountAlertMsg">Number cannot be</string>
    <string name="maxFbPostNumInput">Limit Facebook posts amount</string>
    <string name="maxTweetNumInput">Limit Tweets amount</string>

    <!--    Notifications Preference Screen -->
    <string name="notificationsOffTxt">Notifications are Disabled</string>
    <string name="notificationsOnTxt">Notifications are enabled</string>
    <string name="sound">Sound</string>
    <string name="soundOffTxt">Sound will not be used in Notifications</string>
    <string name="soundOnTxt">Sound will be used in Notifications</string>
    <string name="vibrate">Vibrate</string>
    <string name="vibrateOffTxt">Device will not vibrate with the Notifications</string>
    <string name="vibrateOnTxt">Device will vibrate with the Notifications</string>
    <string name="light">Light</string>
    <string name="lightOffTxt">Light will not be used in Notifications</string>
    <string name="lightOnTxt">Light will be used in Notifications</string>

    <!--  Social Sites Text -->
    <string name="createPost">Create Post</string>
    <string name="post">Post</string>
    <string name="postTxt">Post an Update to: </string>
    <string name="postWish">Wish to post</string>
    <string name="postWish2">I wish to post</string>
    <string name="refresh">Refresh</string>
    <string name="downloadFeed">Download Feed</string>
    <string name="FeedPicDesp">Picture from Feed</string>
    <string name="messagesTxt">Message:</string>
    <string name="hashtags">Hashtags: </string>
    <string name="postedBy">Posted by: </string>
    <string name="noMsg">No Messages</string>
    <string name="link">View Link</string>
    <string name="feedTitle">Item from Feed</string>
    <string name="sharingTo">Sharing to</string>
    <string name="picAdded">Picture added!</string>
    <string name="feedIcon">Social media icon</string>
    <string name="postPic">Add a picture to your post</string>
    <string name="postVideo">Add a video to your post</string>
    <string name="postingCheckBox">Must have box checked to share!</string>
    <string name="viewTimeLine">View Latest Tweets</string>

    <!--  Important Facebook & Twitter values -->
    <string name="facebook_app_id">763430430754593</string>
    <string name="fb_login_protocol_scheme">fb763430430754593</string>
<!--    <string name="facebook_app_id">138609437507381</string>-->
<!--    <string name="fb_login_protocol_scheme">fb138609437507381</string>-->
    <string name="twitter_app_id">16870803</string>
    <string name="twitter_CONSUMER_KEY" translatable="false">q2n0UtzerHQAlAf5DEYxJ0doF</string>
    <string name="twitter_CONSUMER_SECRET" translatable="false">qPb06Os5fjkDTE25Q4niWD3c5Dv6amOeKvwcUd9RYBbc2pLAxh</string>

    <string name="bearer" translatable="false">AAAAAAAAAAAAAAAAAAAAAJNtAQEAAAAA9h1PFi5aeCSPZtmHvtQLN6Qffa8%3DzDCWKajo8ut24kQFQFKr5Q1OYPVIWSUgoqSrzGUVttp1UlbN1k</string>

</resources>
