<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:id = "@+id/NotificationSettings"
        android:title="@string/notifications">

        <SwitchPreference
            android:title="@string/notifications"
            android:defaultValue="true"
            android:persistent="true"
            android:key="notificationSwitch"
            android:summaryOff="@string/notificationsOffTxt"
            android:summaryOn="@string/notificationsOnTxt"
            android:icon="@mipmap/active_notifications_icon"/>
    </PreferenceCategory>

    <SwitchPreference
        app:dependency="notificationSwitch"
        android:title="@string/sound"
        android:defaultValue="true"
        android:persistent="true"
        android:key="soundSwitch"
        android:summaryOff="@string/soundOffTxt"
        android:summaryOn="@string/soundOnTxt"
        android:icon="@mipmap/sound_on_icon_foreground"> <!-- Icons downloaded from https://icons8.com -->
    </SwitchPreference>

    <SwitchPreference
        app:dependency="notificationSwitch"
        android:title="@string/vibrate"
        android:defaultValue="true"
        android:persistent="true"
        android:key="vibrateSwitch"
        android:summaryOff="@string/vibrateOffTxt"
        android:summaryOn="@string/vibrateOnTxt"
        android:icon="@mipmap/vibrate_on_icon_round">
    </SwitchPreference>

    <SwitchPreference
        app:dependency="notificationSwitch"
        android:title="@string/light"
        android:defaultValue="true"
        android:persistent="true"
        android:key="lightSwitch"
        android:summaryOff="@string/lightOffTxt"
        android:summaryOn="@string/lightOnTxt"
        android:icon="@mipmap/light_on_icon_foreground"> <!-- Icons downloaded from https://icons8.com -->
    </SwitchPreference>

</PreferenceScreen>