<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/home_icon_foreground"/>
    </group>
    <item android:title="@string/accountSection">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_FbButton"
                    android:title="@string/fb"
                    android:icon="@drawable/com_facebook_favicon_blue"/>
                <item
                    android:id="@+id/nav_TwitterButton"
                    android:title="@string/twitter"
                    android:icon="@drawable/tw__ic_logo_default"/>
            </group>
        </menu>
    </item>

    <!--    "Facebook Social's Feed" submenu-->
    <item android:title="@string/fbSocialFeed" >
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_FbContentButton"
                    android:title="@string/viewFeed"
                    android:icon="@drawable/download_icon_foreground"/>
                <item
                    android:id="@+id/nav_FBPosting"
                    android:title="@string/fbPosting"
                    android:icon="@drawable/upload_icon_foreground"/>
            </group>
        </menu>
    </item>

    <!--    "Twitter Social's Feed" submenu-->
    <item android:title="@string/twitterSocialFeed" >
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_TwitterContentButton"
                    android:title="@string/viewTweets"
                    android:icon="@drawable/download_icon_foreground"/>
                <item
                    android:id="@+id/nav_TwitterPosting"
                    android:title="@string/twitterPosting"
                    android:icon="@drawable/upload_icon_foreground"/>
            </group>
        </menu>
    </item>

    <!--    View both item submenu -->
    <item android:title="@string/moreSection">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_BothFeeds"
                    android:title="@string/bothFeeds"
                    android:icon="@drawable/download_icon_foreground"/>
                <item
                    android:id="@+id/nav_PostingBoth"
                    android:title="@string/postToBoth"
                    android:icon="@drawable/upload_icon_foreground"/>

            </group>
        </menu>
    </item>

</menu>
