<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:text="@string/aboutMsg"
        android:textColor="#004D40"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/textView"
        android:layout_marginTop="100dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:text="@string/aboutMsg2"
        android:textColor="#A52020"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/textView2"
        android:layout_marginTop="100dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:text="@string/aboutMsg3"
        android:textColor="#0B2C63"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="normal" />
</RelativeLayout>