<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="#99F1EFEF"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/feedImage"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@drawable/custom_border"
            android:contentDescription="@string/feedIcon"
            android:padding="5dp" />

        <LinearLayout
            android:id="@+id/feedTxtArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_border"
            android:orientation="vertical"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/postTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="2dp"
                android:text="@string/post"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hashtagTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/hashtags" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>