<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_FBPosting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".ui.facebook.FacebookPosting">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/postTxt"
        android:textAlignment="center"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/InputArea"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:src="@drawable/com_facebook_favicon_blue"
            tools:visibility="visible" />

        <CheckBox
            android:id="@+id/checkedText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:layout_weight="1"
            android:text="@string/postWish"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/options"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/fbPostSubmitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post" />
    </LinearLayout>
</LinearLayout>